add DependencyContext:removeDuplicates (#2195)